FIX - Sidebar menu not showing scroll on overflow

--- a/src/styles/layout/_sidebar.sass
+++ b/src/styles/layout/_sidebar.sass
@@ -14,6 +14,8 @@
 	background: #171717
 	box-shadow: 0 0 40px rgb(abstracts.$color-badass-black, 50%)
 	z-index: 10
+	display: flex
+	flex-direction: column
 	transition: left 500ms ease-in-out
 
 	&--open
@@ -120,11 +122,19 @@
 		margin-bottom: 32px
 		width: 70%
 		height: 50px
+		flex-shrink: 0
 
 	&__logo
 		width: 100%
 		height: 100%
 		object-fit: contain
+
+	&__menu-wrapper
+		margin-inline: -24px
+		padding-inline: 24px
+		flex-grow: 1
+		overflow: auto
+		overscroll-behavior: contain
 
 	&__submenu
 		margin-bottom: 10px
@@ -147,12 +157,9 @@
 
 	&__logo-wycreative
 		display: block
-		position: absolute
-		left: 50%
-		bottom: 24px
-		margin: 0 auto
+		margin: 24px auto 0
 		max-width: 180px
-		transform: translateX(-50%)
+		flex-shrink: 0
 
 		img
 			width: 100%
